--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
                 right: 0;
             }
             h1 {
-                font-size: 4rem;
+               color: #fff;
+                text-align: center;
+                font-family: sans-serif;
+                font-size: 8em;
+                animation: animate 0.5s linear infinite;
+                margin: 0;
             }
             footer {
                 position: absolute;
@@ -87,6 +92,24 @@
             }
             footer span {
                 font-size: 12px;
+            }
+             @keyframes animate {
+                0%,
+                100% {
+                    text-shadow: -1.5px -1.5px 0 #0ff, 1.5px 1.5px 0 #f00;
+                }
+
+                25% {
+                    text-shadow: 1.5px 1.5px 0 #0ff, -1.5px -1.5px 0 #f00;
+                }
+
+                50% {
+                    text-shadow: 1.5px -1.5px 0 #0ff, 1.5px -1.5px 0 #f00;
+                }
+
+                75% {
+                    text-shadow: -1.5px 1.5px 0 #0ff, -1.5px 1.5px 0 #f00;
+                }
             }
         </style>
         <script>
