--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
                     text-shadow: -1.5px 1.5px 0 #0ff, -1.5px 1.5px 0 #f00;
                 }
             }
+              @media screen and (max-width: 767px) {
+                h1 {
+                    font-size: 4.5rem;
+                }
+            }
         </style>
         <script>
             window.ga =
