--- a/index.html
+++ b/index.html
@@ -5,35 +5,24 @@
         <meta
             http-equiv="Cache-Control"
             content="no-cache" />
-
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=no" />
-      
-        <link
-            rel="icon"
-            href="fav.ico " />
-
-        <title>WishMeLz丨生活其实很有趣</title>
+        <title>WishMeLz丨Life is actually very interesting</title>
         <meta
             name="description"
-            content="WishMeLz,WishMeLz个人导航页,生活其实很有趣。" />
+            content="WishMeLz,WishMeLz-home,Life is actually very interesting。" />
         <meta
             name="keywords"
-            content="WishMeLz,生活其实很有趣,wish,webgl" />
+            content="WishMeLz,Life is actually very interesting,wish,webgl" />
         <meta
             property="og:url"
             content="https://github.com/WishMelz/webgl-home/" />
 
         <script
             type="text/javascript"
-            src="dat.gui.min.js"></script>
+            src="assets/dat.gui.min.js"></script>
         <style>
-            @font-face {
-                font-family: "iconfont";
-                src: url("iconfont.ttf") format("truetype");
-            }
-
             * {
                 user-select: none;
             }
@@ -72,7 +61,7 @@
                 right: 0;
             }
             h1 {
-               color: #fff;
+                color: #fff;
                 text-align: center;
                 font-family: sans-serif;
                 font-size: 8em;
@@ -93,7 +82,7 @@
             footer span {
                 font-size: 12px;
             }
-             @keyframes animate {
+            @keyframes animate {
                 0%,
                 100% {
                     text-shadow: -1.5px -1.5px 0 #0ff, 1.5px 1.5px 0 #f00;
@@ -111,7 +100,7 @@
                     text-shadow: -1.5px 1.5px 0 #0ff, -1.5px 1.5px 0 #f00;
                 }
             }
-              @media screen and (max-width: 767px) {
+            @media screen and (max-width: 767px) {
                 h1 {
                     font-size: 4.5rem;
                 }
@@ -133,10 +122,10 @@
         <div class="wrap">
             <div class="main">
                 <h1>WishMelz</h1>
-                <h2>生活其实很有趣</h2>
+                <h2>Life is actually very interesting</h2>
             </div>
-            <footer>©2018-2025 WishMeLz. Design：ITSSE.CN</footer>
+            <footer>WishMeLz.Design:ITSSE.CN</footer>
         </div>
-        <script src="./script.js"></script>
+        <script src="assets/script.js"></script>
     </body>
 </html>
